src/Styles/_tags.scss
/*--------------------------------------------------------*\
|   ______    __   |
|  |  __  |  |  |  |
|  | |  | |  |  |  |
|  | !__! |  |  |  |
|  !______!  !__!  |  binary : tech art
|
|  @file Tag styles and layout.
|----------------------------------------------------------
|  @author Valeriy Novytskyy
\*---------------------------------------------------------*/

$electrical:  #12c0e1;
$mechanical:  #fcd116;
$software:    #a71d5d;
$robotics:    #ec008c;
$graphic:     #ff260f;
$web:         #795da3;
$frontend:    #0086b3;
$cad:         #ffb40f;
$industrial:  #ba141a;
$database:    #aebdce;
$sql:         #43a39f;
$music:       #6fac45;
$painting:    #ee4a4e;
$sculpture:   #ff840f;
$crafts:      #67d5e9;

.tag {
  &-engineering {
    &-electrical {
      background: $electrical;

      &:hover {
        background: lighten($electrical, 5%);
      }
    }

    &-mechanical {
      background: $mechanical;

      &:hover {
        background: lighten($mechanical, 5%);
      }
    }

    &-software {
      background: $software;

      &:hover {
        background: lighten($software, 5%);
      }
    }

    &-robotics {
      background: $robotics;

      &:hover {
        background: lighten($robotics, 5%);
      }
    }
  }

  &-design {
    &-graphic {
      background: $graphic;

      &:hover {
        background: lighten($graphic, 5%);
      }
    }

    &-web {
      background: $web;

      &:hover {
        background: lighten($web, 5%);
      }
    }

    &-frontend {
      background: $frontend;

      &:hover {
        background: lighten($frontend, 5%);
      }
    }

    &-cad {
      background: $cad;

      &:hover {
        background: lighten($cad, 5%);
      }
    }

    &-industrial {
      background: $industrial;

      &:hover {
        background: lighten($industrial, 5%);
      }
    }

    &-database {
      background: $database;

      &:hover {
        background: lighten($database, 5%);
      }
    }
  }

  &-it {
    &-sql {
      background: $sql;

      &:hover {
        background: lighten($sql, 5%);
      }
    }
  }

  &-art {
    &-music {
      background: $music;

      &:hover {
        background: lighten($music, 5%);
      }
    }

    &-painting {
      background: $painting;

      &:hover {
        background: lighten($painting, 5%);
      }
    }

    &-sculpture {
      background: $sculpture;

      &:hover {
        background: lighten($sculpture, 5%);
      }
    }

    &-crafts {
      background: $crafts;

      &:hover {
        background: lighten($crafts, 5%);
      }
    }
  }
}

.tag-page {
  position: absolute;
  top: 1px;
  bottom: 16px;
  width: 87px;
  border-bottom: 2px solid $accent-color;

  &:hover {
    border-bottom: 2px solid $primary-color;
  }

  &-footer {
    position: absolute;
    left: 0px;
    right: 0px;
    padding-top: 3px;
    top: 100%;
    text-align: center;
    font-family: $small-font;
    font-size: $small-font-size - 2;
    color: $drop-shadow-light-color;
    cursor: pointer;

    &:hover {
      color: $primary-color;
    }
  }

  &-separator {
    position: absolute;
    top: 0px;
    bottom: 0px;
    right: -3px;
    border-right: 1px dashed $border-color;
    outline-offset: 10px;
  }
}

.tag-bar {
  position: absolute;
  top: 8px;
  bottom: 2px;
  min-width: 22px;
}

.tag-block {
  position: absolute;
  width: 16px;
  min-height: 4px;
  border: 2px solid $accent-light-color;
  border-top: 1px solid $accent-light-color;
  border-bottom: 1px solid $accent-light-color;
  cursor: pointer;

  &:last-child {
    border-top: 2px solid $accent-light-color;
  }

  &:first-child {
    border-bottom: 2px solid $accent-light-color;
  }
}

.tag-bar:hover {
  .tag-block {
    border: 2px solid $background-color;
    border-top: 1px solid $background-color;
    border-bottom: 1px solid $background-color;

    &:before {
      content: '';
      position: absolute;
      top: -2px;
      left: -2px;
      right: -2px;
      bottom: -2px;
      box-shadow: 0px 0px 4px 0px $drop-shadow-light-color;
      z-index: -1;
    }

    &:last-child {
      border-top: 2px solid $background-color;
    }

    &:first-child {
      border-bottom: 2px solid $background-color;
    }
  }
}

.tags {
  font-size: 0;
}

.tag {
  display: inline-block;
  color: $accent-text-color;
  background: $accent-color;
  font-size: $small-font-size;
  text-decoration: none;
  line-height: $small-font-size;
  margin-left: 2pt;
  margin-right: 2pt;
  padding: 6px 5pt 7px 5.5pt;
  cursor: pointer;
}

.tag:hover {
  background: $accent-hover-color;
}

.os-win .tag {
  padding: 4.5pt 7pt 6.5pt 8pt;
  font-size: $small-font-size-win;
  line-height: $small-font-size-win - 1.5;
}

.ie .tag {
  padding-top: 4pt;
  padding-bottom: 7pt;
}

.os-win.hi-dpi .tag {
  padding-top: 4pt;
  padding-bottom: 6pt;
}

.tag:before {
  content: '';
  position: absolute;
  border-top: 8pt solid transparent;
  border-left: 8pt solid $background-color;
  margin-left: -6.5pt;
  margin-top: 8pt;
  cursor: default;
}

.os-win .tag:before {
  border-top: 10pt solid transparent;
  border-left: 10pt solid $background-color;
  margin-top: 9pt;
  margin-left: -8pt;
}

.tag:after {
  content: '';
  position: absolute;
  float: right;
  border-bottom: 8pt solid transparent;
  border-right: 8pt solid $background-color;
  margin-left: -2pt;
  margin-top: -4.5pt;
  cursor: default;
}

.os-win .tag:after {
  border-bottom: 10pt solid transparent;
  border-right: 10pt solid $background-color;
  margin-left: 0;
}

a.tag:hover {
  color: $accent-text-color;
}

